import/libical/src/libicalss/icalssyacc.output
Terminals which are not used

   QUOTE
   EOL
   END


Grammar

    0 $accept: query_min $end

    1 query_min: SELECT select_list FROM from_list WHERE where_list
    2          | SELECT select_list FROM from_list
    3          | error

    4 select_list: STRING
    5            | select_list COMMA STRING

    6 from_list: STRING
    7          | from_list COMMA STRING

    8 where_clause: /* empty */
    9             | STRING EQUALS STRING
   10             | STRING IS SQLNULL
   11             | STRING IS NOT SQLNULL
   12             | STRING NOTEQUALS STRING
   13             | STRING LESS STRING
   14             | STRING GREATER STRING
   15             | STRING LESSEQUALS STRING
   16             | STRING GREATEREQUALS STRING

   17 where_list: where_clause
   18           | where_list AND where_clause
   19           | where_list OR where_clause


Terminals, with rules where they appear

$end (0) 0
error (256) 3
STRING (258) 4 5 6 7 9 10 11 12 13 14 15 16
SELECT (259) 1 2
FROM (260) 1 2
WHERE (261) 1
COMMA (262) 5 7
QUOTE (263)
EQUALS (264) 9
NOTEQUALS (265) 12
LESS (266) 13
GREATER (267) 14
LESSEQUALS (268) 15
GREATEREQUALS (269) 16
AND (270) 18
OR (271) 19
EOL (272)
END (273)
IS (274) 10 11
NOT (275) 11
SQLNULL (276) 10 11


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
query_min (23)
    on left: 1 2 3, on right: 0
select_list (24)
    on left: 4 5, on right: 1 2 5
from_list (25)
    on left: 6 7, on right: 1 2 7
where_clause (26)
    on left: 8 9 10 11 12 13 14 15 16, on right: 17 18 19
where_list (27)
    on left: 17 18 19, on right: 1 18 19


state 0

    0 $accept: . query_min $end

    error   shift, and go to state 1
    SELECT  shift, and go to state 2

    query_min  go to state 3


state 1

    3 query_min: error .

    $default  reduce using rule 3 (query_min)


state 2

    1 query_min: SELECT . select_list FROM from_list WHERE where_list
    2          | SELECT . select_list FROM from_list

    STRING  shift, and go to state 4

    select_list  go to state 5


state 3

    0 $accept: query_min . $end

    $end  shift, and go to state 6


state 4

    4 select_list: STRING .

    $default  reduce using rule 4 (select_list)


state 5

    1 query_min: SELECT select_list . FROM from_list WHERE where_list
    2          | SELECT select_list . FROM from_list
    5 select_list: select_list . COMMA STRING

    FROM   shift, and go to state 7
    COMMA  shift, and go to state 8


state 6

    0 $accept: query_min $end .

    $default  accept


state 7

    1 query_min: SELECT select_list FROM . from_list WHERE where_list
    2          | SELECT select_list FROM . from_list

    STRING  shift, and go to state 9

    from_list  go to state 10


state 8

    5 select_list: select_list COMMA . STRING

    STRING  shift, and go to state 11


state 9

    6 from_list: STRING .

    $default  reduce using rule 6 (from_list)


state 10

    1 query_min: SELECT select_list FROM from_list . WHERE where_list
    2          | SELECT select_list FROM from_list .
    7 from_list: from_list . COMMA STRING

    WHERE  shift, and go to state 12
    COMMA  shift, and go to state 13

    $default  reduce using rule 2 (query_min)


state 11

    5 select_list: select_list COMMA STRING .

    $default  reduce using rule 5 (select_list)


state 12

    1 query_min: SELECT select_list FROM from_list WHERE . where_list

    STRING  shift, and go to state 14

    $default  reduce using rule 8 (where_clause)

    where_clause  go to state 15
    where_list    go to state 16


state 13

    7 from_list: from_list COMMA . STRING

    STRING  shift, and go to state 17


state 14

    9 where_clause: STRING . EQUALS STRING
   10             | STRING . IS SQLNULL
   11             | STRING . IS NOT SQLNULL
   12             | STRING . NOTEQUALS STRING
   13             | STRING . LESS STRING
   14             | STRING . GREATER STRING
   15             | STRING . LESSEQUALS STRING
   16             | STRING . GREATEREQUALS STRING

    EQUALS         shift, and go to state 18
    NOTEQUALS      shift, and go to state 19
    LESS           shift, and go to state 20
    GREATER        shift, and go to state 21
    LESSEQUALS     shift, and go to state 22
    GREATEREQUALS  shift, and go to state 23
    IS             shift, and go to state 24


state 15

   17 where_list: where_clause .

    $default  reduce using rule 17 (where_list)


state 16

    1 query_min: SELECT select_list FROM from_list WHERE where_list .
   18 where_list: where_list . AND where_clause
   19           | where_list . OR where_clause

    AND  shift, and go to state 25
    OR   shift, and go to state 26

    $default  reduce using rule 1 (query_min)


state 17

    7 from_list: from_list COMMA STRING .

    $default  reduce using rule 7 (from_list)


state 18

    9 where_clause: STRING EQUALS . STRING

    STRING  shift, and go to state 27


state 19

   12 where_clause: STRING NOTEQUALS . STRING

    STRING  shift, and go to state 28


state 20

   13 where_clause: STRING LESS . STRING

    STRING  shift, and go to state 29


state 21

   14 where_clause: STRING GREATER . STRING

    STRING  shift, and go to state 30


state 22

   15 where_clause: STRING LESSEQUALS . STRING

    STRING  shift, and go to state 31


state 23

   16 where_clause: STRING GREATEREQUALS . STRING

    STRING  shift, and go to state 32


state 24

   10 where_clause: STRING IS . SQLNULL
   11             | STRING IS . NOT SQLNULL

    NOT      shift, and go to state 33
    SQLNULL  shift, and go to state 34


state 25

   18 where_list: where_list AND . where_clause

    STRING  shift, and go to state 14

    $default  reduce using rule 8 (where_clause)

    where_clause  go to state 35


state 26

   19 where_list: where_list OR . where_clause

    STRING  shift, and go to state 14

    $default  reduce using rule 8 (where_clause)

    where_clause  go to state 36


state 27

    9 where_clause: STRING EQUALS STRING .

    $default  reduce using rule 9 (where_clause)


state 28

   12 where_clause: STRING NOTEQUALS STRING .

    $default  reduce using rule 12 (where_clause)


state 29

   13 where_clause: STRING LESS STRING .

    $default  reduce using rule 13 (where_clause)


state 30

   14 where_clause: STRING GREATER STRING .

    $default  reduce using rule 14 (where_clause)


state 31

   15 where_clause: STRING LESSEQUALS STRING .

    $default  reduce using rule 15 (where_clause)


state 32

   16 where_clause: STRING GREATEREQUALS STRING .

    $default  reduce using rule 16 (where_clause)


state 33

   11 where_clause: STRING IS NOT . SQLNULL

    SQLNULL  shift, and go to state 37


state 34

   10 where_clause: STRING IS SQLNULL .

    $default  reduce using rule 10 (where_clause)


state 35

   18 where_list: where_list AND where_clause .

    $default  reduce using rule 18 (where_list)


state 36

   19 where_list: where_list OR where_clause .

    $default  reduce using rule 19 (where_list)


state 37

   11 where_clause: STRING IS NOT SQLNULL .

    $default  reduce using rule 11 (where_clause)
